# ChessConsole

./: .gitignore  CMakeLists.txt  ChessConsole.sln  How To Make Moves.txt  README.md  engine_manager.go  go.mod  main.go
ChessConsole/: BitBoard.cpp  BitBoard.h  ChessConsole.vcxproj  ChessConsole.vcxproj.filters  ChessConstants.hpp  Engine.cpp  Engine.h  Main.cpp  Move.cpp  Move.h  MoveGen.cpp  MoveGen.h  MoveList.cpp  MoveList.h  PreGen.cpp  PreGen.h  PregeneratedMagics.hpp  Random.cpp  Random.h  State.cpp  State.h
